--- a/notebooks/Granulosa_cells.ipynb
+++ b/notebooks/Granulosa_cells.ipynb
@@ -37,7 +37,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 2,
    "id": "a9e5d0c7",
    "metadata": {},
    "outputs": [],
@@ -47,7 +47,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 3,
    "id": "4d24ffa2",
    "metadata": {},
    "outputs": [
@@ -55,148 +55,127 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
+      "WARNING: If you miss a compact list, please try `print_header`!\n",
       "-----\n",
-      "anndata     0.9.1\n",
-      "scanpy      1.9.3\n",
+      "anndata     0.8.0\n",
+      "scanpy      NA\n",
+      "sinfo       0.3.1\n",
       "-----\n",
-      "PIL                         9.1.1\n",
-      "anyio                       NA\n",
-      "asciitree                   NA\n",
-      "attr                        21.2.0\n",
-      "babel                       2.9.1\n",
-      "backcall                    0.2.0\n",
-      "brotli                      NA\n",
-      "certifi                     2022.12.07\n",
-      "cffi                        1.15.0\n",
-      "charset_normalizer          2.0.7\n",
-      "cloudpickle                 2.2.0\n",
-      "colorama                    0.4.6\n",
-      "cycler                      0.10.0\n",
-      "cython_runtime              NA\n",
-      "cytoolz                     0.12.1\n",
-      "dask                        2023.5.1\n",
-      "dateutil                    2.8.2\n",
-      "debugpy                     1.5.0\n",
-      "decorator                   5.1.1\n",
-      "defusedxml                  0.7.1\n",
-      "deprecated                  1.2.11\n",
-      "dill                        0.3.6\n",
-      "entrypoints                 0.3\n",
-      "fa2                         NA\n",
-      "fasteners                   0.18\n",
-      "fastjsonschema              NA\n",
-      "fcsparser                   0.2.4\n",
-      "future                      0.18.2\n",
-      "google                      NA\n",
-      "graphtools                  1.5.3\n",
-      "h5py                        3.7.0\n",
-      "harmony                     0.1.4\n",
-      "idna                        3.3\n",
-      "igraph                      0.10.3\n",
-      "ipykernel                   6.4.1\n",
-      "ipython_genutils            0.2.0\n",
-      "ipywidgets                  7.7.1\n",
-      "jedi                        0.18.0\n",
-      "jinja2                      3.1.2\n",
-      "joblib                      1.3.0\n",
-      "json5                       NA\n",
-      "jsonschema                  4.1.0\n",
-      "jupyter_server              1.11.1\n",
-      "jupyterlab_server           2.8.2\n",
-      "kiwisolver                  1.4.3\n",
-      "leidenalg                   0.9.1\n",
-      "llvmlite                    0.40.0\n",
-      "lz4                         4.3.2\n",
-      "markupsafe                  2.0.1\n",
-      "matplotlib                  3.6.2\n",
-      "mpl_toolkits                NA\n",
-      "msgpack                     1.0.4\n",
-      "natsort                     8.2.0\n",
-      "nbclassic                   NA\n",
-      "nbformat                    5.1.3\n",
-      "networkx                    2.8.4\n",
-      "numba                       0.57.0\n",
-      "numcodecs                   0.11.0\n",
-      "numexpr                     2.8.4\n",
-      "numpy                       1.24.3\n",
-      "packaging                   22.0\n",
-      "palantir                    1.1\n",
-      "pandas                      1.5.2\n",
-      "parso                       0.8.2\n",
-      "pexpect                     4.8.0\n",
-      "phate                       1.0.10\n",
-      "phenograph                  1.5.7\n",
-      "pickleshare                 0.7.5\n",
-      "pkg_resources               NA\n",
-      "progressbar                 4.2.0\n",
-      "prometheus_client           NA\n",
-      "prompt_toolkit              3.0.20\n",
-      "psutil                      5.9.1\n",
-      "ptyprocess                  0.7.0\n",
-      "pvectorc                    NA\n",
-      "pyarrow                     12.0.0\n",
-      "pydev_ipython               NA\n",
-      "pydevconsole                NA\n",
-      "pydevd                      2.4.1\n",
-      "pydevd_concurrency_analyser NA\n",
-      "pydevd_file_utils           NA\n",
-      "pydevd_plugins              NA\n",
-      "pydevd_tracing              NA\n",
-      "pygam                       0.8.0\n",
-      "pygments                    2.14.0\n",
-      "pygsp                       0.5.1\n",
-      "pyparsing                   3.0.9\n",
-      "pyrsistent                  NA\n",
-      "python_utils                NA\n",
-      "pytz                        2021.1\n",
-      "requests                    2.26.0\n",
-      "s_gd2                       1.8.1\n",
-      "scipy                       1.11.0\n",
-      "scprep                      1.0.13\n",
-      "seaborn                     0.12.2\n",
-      "send2trash                  NA\n",
-      "session_info                1.0.0\n",
-      "simplejson                  3.18.3\n",
-      "six                         1.16.0\n",
-      "sklearn                     1.2.0\n",
-      "sniffio                     1.2.0\n",
-      "socks                       1.7.1\n",
-      "sphinxcontrib               NA\n",
-      "statsmodels                 0.13.5\n",
-      "storemagic                  NA\n",
-      "swig_runtime_data4          NA\n",
-      "tasklogger                  1.2.0\n",
-      "tblib                       1.7.0\n",
-      "terminado                   0.12.1\n",
-      "texttable                   1.6.7\n",
-      "threadpoolctl               2.1.0\n",
-      "tlz                         0.12.1\n",
-      "toolz                       0.11.2\n",
-      "torch                       1.12.0+cu102\n",
-      "tornado                     6.1\n",
-      "tqdm                        4.64.1\n",
-      "traitlets                   5.1.0\n",
-      "typing_extensions           NA\n",
-      "urllib3                     1.26.7\n",
-      "wcwidth                     0.2.5\n",
-      "websocket                   1.2.1\n",
-      "wrapt                       1.12.1\n",
-      "yaml                        6.0\n",
-      "zarr                        2.13.3\n",
-      "zipp                        NA\n",
-      "zmq                         22.3.0\n",
-      "zoneinfo                    NA\n",
+      "PIL                 8.1.1\n",
+      "anndata             0.8.0\n",
+      "anyio               NA\n",
+      "argon2              20.1.0\n",
+      "asciitree           NA\n",
+      "attr                20.3.0\n",
+      "babel               2.9.0\n",
+      "backcall            0.2.0\n",
+      "beta_ufunc          NA\n",
+      "binom_ufunc         NA\n",
+      "brotli              NA\n",
+      "cairo               1.20.0\n",
+      "certifi             2021.10.08\n",
+      "cffi                1.14.5\n",
+      "chardet             4.0.0\n",
+      "cloudpickle         1.3.0\n",
+      "colorama            0.4.4\n",
+      "cycler              0.10.0\n",
+      "cython_runtime      NA\n",
+      "dask                2021.02.0\n",
+      "dateutil            2.8.1\n",
+      "decorator           4.4.2\n",
+      "fasteners           NA\n",
+      "future_fstrings     NA\n",
+      "google              NA\n",
+      "h5py                3.9.0\n",
+      "idna                2.10\n",
+      "igraph              0.8.3\n",
+      "ipykernel           5.5.0\n",
+      "ipython_genutils    0.2.0\n",
+      "ipywidgets          7.6.3\n",
+      "jedi                0.18.0\n",
+      "jinja2              2.11.3\n",
+      "joblib              1.0.1\n",
+      "json5               NA\n",
+      "jsonschema          3.2.0\n",
+      "jupyter_server      1.7.0\n",
+      "jupyterlab_server   2.5.1\n",
+      "kiwisolver          1.3.1\n",
+      "leidenalg           0.8.3\n",
+      "llvmlite            0.35.0\n",
+      "louvain             0.7.0\n",
+      "markupsafe          1.1.1\n",
+      "matplotlib          3.3.4\n",
+      "mpl_toolkits        NA\n",
+      "msgpack             1.0.4\n",
+      "natsort             7.1.1\n",
+      "nbclassic           NA\n",
+      "nbformat            5.1.2\n",
+      "nbinom_ufunc        NA\n",
+      "numba               0.52.0\n",
+      "numcodecs           0.7.3\n",
+      "numexpr             2.7.2\n",
+      "numpy               1.19.5\n",
+      "packaging           20.9\n",
+      "pandas              1.3.5\n",
+      "parso               0.8.1\n",
+      "pexpect             4.8.0\n",
+      "pickleshare         0.7.5\n",
+      "pkg_resources       NA\n",
+      "prometheus_client   NA\n",
+      "prompt_toolkit      3.0.16\n",
+      "psutil              5.8.0\n",
+      "ptyprocess          0.7.0\n",
+      "pvectorc            NA\n",
+      "pygments            2.8.0\n",
+      "pyparsing           2.4.7\n",
+      "pyrsistent          NA\n",
+      "pytoml              NA\n",
+      "pytz                2021.1\n",
+      "requests            2.25.1\n",
+      "scanpy              NA\n",
+      "scipy               1.7.3\n",
+      "seaborn             0.11.1\n",
+      "send2trash          NA\n",
+      "setuptools_scm      NA\n",
+      "simplejson          3.17.6\n",
+      "sinfo               0.3.1\n",
+      "six                 1.15.0\n",
+      "sklearn             0.22\n",
+      "sksparse            0.4.4\n",
+      "sniffio             1.2.0\n",
+      "socks               1.7.1\n",
+      "sparse              0.12.0\n",
+      "sphinxcontrib       NA\n",
+      "statsmodels         0.12.2\n",
+      "storemagic          NA\n",
+      "tables              3.6.1\n",
+      "terminado           0.9.2\n",
+      "texttable           1.6.3\n",
+      "tlz                 0.11.1\n",
+      "toolz               0.11.1\n",
+      "tornado             6.1\n",
+      "traitlets           5.0.5\n",
+      "typing_extensions   NA\n",
+      "urllib3             1.26.3\n",
+      "wcwidth             0.2.5\n",
+      "websocket           0.59.0\n",
+      "yaml                5.4.1\n",
+      "zarr                2.6.1\n",
+      "zmq                 22.0.3\n",
+      "zope                NA\n",
       "-----\n",
-      "IPython             7.28.0\n",
-      "jupyter_client      7.0.6\n",
-      "jupyter_core        4.8.1\n",
-      "jupyterlab          3.2.0\n",
-      "notebook            6.4.4\n",
+      "IPython             7.20.0\n",
+      "jupyter_client      6.1.11\n",
+      "jupyter_core        4.7.1\n",
+      "jupyterlab          3.0.15\n",
+      "notebook            6.2.0\n",
       "-----\n",
-      "Python 3.9.13 (main, Aug 25 2022, 23:26:10) [GCC 11.2.0]\n",
-      "Linux-5.14.0-70.13.1.el9_0.x86_64-x86_64-with-glibc2.34\n",
+      "Python 3.8.5 (default, Sep  4 2020, 07:30:14) [GCC 7.3.0]\n",
+      "Linux-5.14.0-70.13.1.el9_0.x86_64-x86_64-with-glibc2.10\n",
+      "80 logical CPU cores, x86_64\n",
       "-----\n",
-      "Session information updated at 2023-07-22 16:06\n"
+      "Session information updated at 2023-08-28 14:31\n",
+      "\n"
      ]
     }
    ],
@@ -209,7 +188,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 69,
+   "execution_count": 4,
    "id": "de498aa1",
    "metadata": {},
    "outputs": [],
@@ -220,7 +199,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 5,
    "id": "feb5041d",
    "metadata": {},
    "outputs": [
@@ -1099,7 +1078,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 6,
    "id": "d24b43dd",
    "metadata": {},
    "outputs": [
@@ -1109,7 +1088,7 @@
        "(58038, 31053)"
       ]
      },
-     "execution_count": 13,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1121,7 +1100,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 7,
    "id": "85877f14",
    "metadata": {},
    "outputs": [],
@@ -1131,7 +1110,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 8,
    "id": "c3007750",
    "metadata": {
     "scrolled": false
@@ -1141,7 +1120,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/tmp/ipykernel_1696733/614057649.py:2: ImplicitModificationWarning: Trying to modify attribute `.obs` of view, initializing view as actual.\n",
+      "<ipython-input-8-9e9bab7a47ea>:2: ImplicitModificationWarning: Trying to modify attribute `.obs` of view, initializing view as actual.\n",
       "  granulosa_mural.obs[\"FollicleNumber\"] = follicle_map\n"
      ]
     },
@@ -1166,12 +1145,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": 9,
    "id": "66e24dc0",
    "metadata": {},
    "outputs": [],
    "source": [
-    "mode_df.to_csv(\"./../../mouse_ovulation/csvs/follicle_metadata.csv\")"
+    "mode_df.to_csv(\"./../../mouse_ovulation/metadata_csvs/follicle_metadata.csv\")"
    ]
   },
   {
@@ -3000,7 +2979,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.13"
+   "version": "3.8.5"
   }
  },
  "nbformat": 4,
